Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-9098

RecordBatch::ToStructArray cannot handle record batches with 0 column

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 0.17.1
    • 1.0.0
    • C++

    Description

      If RecordBatch::ToStructArray is called against a record batch with 0 column, the following error will be raised:

      Invalid: Can't infer struct array length with 0 child arrays

      Attachments

        Issue Links

          Activity

            People

              brillsp Zhuo Peng
              brillsp Zhuo Peng
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 50m
                  50m