ARROW-9098: [C++] Fixed ToStructArray handling of 0 column RecordBatches

Also check for null_count == 0 in FromStructArray (was a TODO).

Closes #7401 from brills/to_rb

Authored-by: Zhuo Peng <1835738+brills@users.noreply.github.com>
Signed-off-by: Antoine Pitrou <antoine@python.org>